# biosurfer

./: .coveragerc  .gitignore  LICENSE  README.md  alignment_examples_alnb_diff_from_alnpb.txt  annotate_isoform_events.py  biosurfer.yml  environment_droplet.yml  pytest.ini  setup.cfg  setup.py  template.py  template_blocks.py  test.py  test_isocreatealign.py  test_key.py  test_v2.py
archive/: biosurfer.yml  bone2_sqtls.py  bone_sqtls.py  copd_sqtls.py  smc_sqtls.py
biosurfer/: biosurfer.py
example-scripts/: alignment-analysis-gencode.py  alignment-analysis-wtc11.py  alignment-analysis.py  alignment-examples.py  bone2_sqtls.py  bone_domains.py  bone_sqtls.py  copd_sqtls.py  load_bone2_database.py  load_bone_database.py  load_gencode_database.py  load_wtc11_database.py  multiprocess-plotting.py  smc_sqtls.py  splice-event-calling.py  test_database.py  tissue_specific_exons.py
example_scripts/: alignment_analysis_gencode.py  alignment_analysis_wtc11.py  load_bone2_database.py  load_gencode_database.py  load_smc_database.py  load_wtc11_database.py  multiprocess-plotting.py  plot_biosurfer.py  tissue_specific_exons.py
isomodules/: helpers.py  isoalign.py  isoalign2.py  isoclass.py  isocompare.py  isocreate.py  isocreatealign.py  isocreatefeat.py  isofeature.py  isofunc.py  isogroup.py  isoimage.py  isomut.py
isomodules_in_progress/: extra_code.py  isoalign2.py  isoalign_old_only_display.py  isoalign_old_w_clustal.py  isoclass_old_strikeout.py  isocompare.py  isofeature_old_based_on_mapping.py  isofuncs_old_w_strikeout.py  isoimage_old_strikeout.py  splicesite.py  x_code_to_call_frm_tucked_here.py  x_wrapper_test.py
tests/: .coveragerc  bone_sqtls.py  conftest.py  (+8 more)
(+56 files in other folders)
