[metadata]
name = biosurfer
version = 0.1
author = Sheynkman Lab
author_email = sheynkman.lab@gmail.com
description = Biosurfer allows easy navigation between transcriptome and proteome
url = https://github.com/sheynkman-lab/biosurfer
classifiers =
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages =
    biosurfer
python_requires = >=3.9
install_requires =
    attrs
    biopython
    brokenaxes
    # graph-tool  # FIXME: how do we install this?...
    intervaltree >= 3.1.0
    matplotlib
    more-itertools
    numpy
    sqlalchemy >= 1.4
    tqdm
dependency_links =
    git+https://github.com/chaimleib/intervaltree.git
